# Memla-v2

./: .gitignore  90_second_demo.md  PYPI_README.md  README.md  index.html  memla.py  one_sentence_pitch.txt  pyproject.toml  requirements.txt  server.py  strategic_memo.md
cases/: browser_eval_cases.jsonl  browser_eval_cases_v2.jsonl  browser_eval_cases_v3.jsonl  browser_eval_cases_v4.jsonl  browser_eval_cases_v5.jsonl  browser_eval_cases_v6.jsonl  browser_eval_cases_v7.jsonl  browser_eval_cases_v8.jsonl  coding_eval_cases.jsonl  finance_pretrade_eval_cases.jsonl  finance_pretrade_public_eval_cases.jsonl  finance_pretrade_public_sources.md  healthcare_denial_eval_cases.jsonl  healthcare_denial_public_sources.md  language_eval_cases_v1.jsonl  language_eval_cases_v2.jsonl  language_eval_cases_v3.jsonl  language_eval_cases_v4.jsonl  math_linear_c2a_v2_harder.jsonl  memory_eval_cases_v1.jsonl  policy_authz_eval_cases.jsonl  policy_authz_public_sources.md  terminal_eval_cases.jsonl  web_creator_age_eval_cases_v1.jsonl  web_eval_cases_v1.jsonl
ios/: README.md
memory_system/: action_capsules.py  action_ontology.py  browser_ontology_benchmark.py  cli.py  missions.py  natural_terminal.py  ollama_client.py  server_api.py  terminal_workbench.html  terminal_workbench.py
proof/: action_capsules_v1.md  action_ontology_v1.md  action_ontology_v2.md  action_ontology_v3.md  browser_ontology_v1.md  browser_ontology_v2.md  browser_ontology_v3.md  browser_ontology_v4.md  browser_ontology_v5.md  browser_ontology_v6.md  browser_ontology_v7.md  browser_ontology_v8.md  language_ontology_v1.md  language_ontology_v2.md  language_ontology_v3.md  language_ontology_v4.md  memla_browser_v1.md  memory_ontology_v1.md  memory_ontology_v2.md  mission_queue_v1.md  summary.md
tests/: test_ollama_client.py  test_step13_coding_compile_loop.py  test_step14_compile_loop_benchmark.py  test_step15_patch_execution_benchmark.py  test_step16_math_c2a_benchmark.py  test_step17_memla_cli.py  test_step18_coding_c2a_benchmark.py  test_step19_c2a_trace_bank.py  test_step20_c2a_policy_bank.py  test_step21_finance_pretrade_benchmark.py  test_step22_finance_policy_bank.py  test_step23_healthcare_denial_benchmark.py  test_step24_policy_authz_benchmark.py  test_step25_policy_authz_policy_bank.py  test_step26_natural_terminal.py  test_step28_memla_api.py  (+3 more)
(+49 files in other folders)
