[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memla"
version = "0.1.1"
description = "Local CLI runtime that helps smaller Ollama models make better technical decisions in verifier-backed loops."
readme = { file = "PYPI_README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
  { name = "Jackfarmer2328", email = "samatarsalahudeen@gmail.com" }
]
license = "MIT"
keywords = ["ollama", "llm", "cli", "coding", "local-llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
]
dependencies = [
  "requests>=2.31,<3",
  "torch>=2.1",
  "transformers>=4.40",
  "peft>=0.7",
  "safetensors>=0.4",
  "sentence-transformers>=2.2",
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "fastmcp>=2.0",
  "bitsandbytes>=0.41",
  "accelerate>=0.25",
  "sympy>=1.12",
]

[project.urls]
Homepage = "https://github.com/Jackfarmer2328/Memla-v2"
Repository = "https://github.com/Jackfarmer2328/Memla-v2"
Issues = "https://github.com/Jackfarmer2328/Memla-v2/issues"
Documentation = "https://memla.vercel.app"

[project.scripts]
memla = "memory_system.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["memory_system", "memory_system.*"]
